womtool/src/test/resources/validate/biscayne/invalid/object_type/object_type.wdl
version development-1.1

workflow object_type {
  input {
    Object foo
  }

  output {
    Object foo_out = foo
  }
}
